--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for Perl extension File::BOM::Utils.
 	- Change output of test() method slightly, so 'Name' now says 'BOM name'.
 	- Remove Build.PL.
 	- Switch pre-req from File::Slurp to File::Slurper.
+	- Move .gitignore from MANIFEST to MANIFEST.SKIP.
 
 1.00  2015-06-24 12:09:00
 	- Original version
