--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension File::BOM::Utils.
 1.02  2015-09-06 16:01:00
 	- Fix typo causing syntax error.
 	- Fix call which used write_binary instead of write_text.
+	- Update docs.
 
 1.01  2015-09-02 17:40:00
 	- Fix docs in Util.pm which wrongly said lower-case bom names were ok.
